- Fix summary page values - Fix z-index of search results

--- a/cfgov/unprocessed/apps/paying-for-college/css/college-costs/search.less
+++ b/cfgov/unprocessed/apps/paying-for-college/css/college-costs/search.less
@@ -6,6 +6,7 @@
 		border: 1px solid black;
 		position: absolute;
 		display: none;
+		z-index: 1;
 
 		&.active {
 			display: block;
